--- a/style.css
+++ b/style.css
@@ -45,3 +45,30 @@ h1{
     background-position: right;
 }
 
+.experience-area{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+
+.experience-item{
+    box-shadow: 10px 10px 40px gray;
+    width: 40%;
+    margin-left: 50px;
+    margin-right: 50px;
+    padding-left: 15px;
+    border-radius: 10px;
+    border-left: 7px solid blue;
+}
+
+#full-stack-developer{
+   
+    border-left: 7px solid tomato;
+
+}
+
+#baby-web-developer{
+    border-left: 7px solid blue;
+}
+
+
